[package]
authors = ["Andrei"]
edition = "2018"
name = "m0test"
readme = "README.md"
version = "0.1.0"
[[bin]]
bench = false
name = "m0test"
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.7"
smart-leds = "0.3.0"
ws2812-blocking-spi = "0.1.0"

[dependencies.panic-rtt-target]
features = ["cortex-m"]
version = "0.1.2"

[dependencies.rand]
default-features = false
version = "*"

[dependencies.rand_chacha]
default-features = false
version = "*"

[dependencies.rtt-target]
features = ["cortex-m"]
version = "0.3.1"

[dependencies.stm32f0xx-hal]
features = ["stm32f030x8"]
version = "0.18"

[profile]
[profile.release]
codegen-units = 1
debug = true
lto = true # better optimizations
