[package]
authors = ["Andrei"]
edition = "2018"
readme = "README.md"
name = "m0test"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
rtt-target = {version = "0.3.1", features=["cortex-m"]}
panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
stm32f0xx-hal = { version = "0.18", features = ["stm32f030x8"]}

[dev-dependencies]

aht10 = { path = "/home/andrei/rust_development/aht10" }


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "m0test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations



